changed to bum because...

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <center><h1>
-  <span id="fuse" style="color:#777">Fuse</span> 
+  <span id="fuse" style="color:#777">Fusebum</span> 
   <span id="box" style="color:#777">Box</span> 
   <span id="city" style="color:#777">City</span></h1></center>
   <script>
